gap property fix for mobile devices

--- a/public/output.css
+++ b/public/output.css
@@ -1856,6 +1856,10 @@ Ensure the default browser behavior of the `hidden` attribute.
     margin-right: 0.5rem;
   }
 
+  .sm\:mb-0 {
+    margin-bottom: 0px;
+  }
+
   .sm\:flex {
     display: flex;
   }
